--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.376.0",
     "microcms-js-sdk": "^3.1.0",
     "next": "14.1.4",
     "react": "^18",
