--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "rss": "^1.2.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "github:tailwindcss/typography",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/rss": "^0.0.32",
     "autoprefixer": "^10.0.1",
+    "cheerio": "1.0.0-rc.12",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
