--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vercel/og": "^0.6.2",
     "lucide-react": "^0.376.0",
     "microcms-js-sdk": "^3.1.0",
+    "mongodb": "^6.7.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
