--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "rss": "^1.2.2"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "@tailwindcss/typography": "^0.5.13",
     "@types/node": "^20",
     "@types/react": "^18",
