--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "@vercel/og": "^0.6.2",
     "lucide-react": "^0.376.0",
     "microcms-js-sdk": "^3.1.0",
@@ -16,7 +17,9 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "rss": "^1.2.2"
+    "react-hook-form": "^7.54.0",
+    "rss": "^1.2.2",
+    "zod": "^3.24.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
